# niwo-ocaml

./: .gitignore  README.md  dune-project  niwo-ocaml.opam  niwo.opam  plan.md  project_guidelines.md
.github/workflows/: format-check.yml  style-check.yml  test.yml
src/: dune  foltl.ml  foltl.mli  formula.ml  formula.mli  formula_parser.ml  formula_parser.mli  niwo.ml  niwo.mli
test/: dune  test_foltl.ml  test_formula.ml  test_formula_parser.ml  test_niwo.ml  test_parser.ml
