opam-version: "2.0"
name: "niwo-ocaml"
version: "0.1.0"
synopsis: "NIWO2 implementation in OCaml"
description: "A project to implement the NIWO2 tool in OCaml."
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.7"}
  "core"
  "core_unix"
  "ppx_expect" {with-test}
  "re" {>= "1.10.0"}      (* for regex in decoding *)
  "angstrom" {>= "0.15.0"} (* for parser combinators *)
]
